# attitude_filter

./: CMakeLists.txt  README.md  nodelet_plugin.xml  package.xml
config/: params.yaml
include/attitude_filter/: attitude_cdkf.h  attitude_state.h
launch/: test.launch
src/: attitude_cdkf.cpp  attitude_cdkf_nodelet.cpp
