<?xml version="1.0"?>
<package format="2">
  <name>attitude_filter</name>
  <version>0.0.0</version>
  <description>The attitude_filter package</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_simple</build_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
